--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,13 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.5.6</version>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.springframework.security</groupId>
+     <artifactId>spring-security-core</artifactId>
+     <version>6.1.0</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
