--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 server:
+  port: 9191
   error:
     include-message: always
     include-binding-errors: always
 
 spring:
   datasource:
-    password:
-    url: jdbc:postgresql://localhost:5433/registration
-    username:
+    password: admin
+    url: jdbc:mysql://localhost:3306/registration_db
+    username: root
   jpa:
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
