--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,5 @@ spring:
     username: root
   jpa:
     hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        format_sql: true
+      ddl-auto: create
     show-sql: true
